feat: Phase 22 — The Aegis: In-Game Verification & Deep Protection
of the a downstream mod consumer feedback (AETHERIUM_FEEDBACK.md, now 28 KB)
plus the user's directives: no deferrals, stronger sovereign protection, and a way
to verify and analyze mods right in the game.

Correctness (feedback , ):
- Shield ↔ name-based index: with --rename, ShieldDirectory now rewrites
 content.index/behaviors.index through the rename map (schema-agnostic; fail-loud
 guard if a renamed-away class survives), so renaming no longer yields a green build
 with a broken jar. shieldRename is safe by default again. ShieldIndexTest.
- Lang merge: the Gradle plugin merges AP-generated and hand-written
 assets/*/lang/*.json by key union (conflict warns) instead of EXCLUDE silently
 dropping one. LangMergeTest.

The loader UI adapter (feedback — no longer deferred):
- aetherium-ui gains a UiAccess SPI + AetheriumUi.open (ServiceLoader, no-op off-client).
- aetherium-loader ships NeoForgeUiRenderer (GuiGraphics), font-accurate NeoForgeUiMetrics
 (fixes the Cyrillic width error), AetheriumScreenAdapter extends Screen routing
 render/click/keyPressed/charTyped/scroll, and NeoForgeUiAccess (setScreen). The UI
 can finally reach a player.

UI robustness (feedback //):
- FlexLayout flex-shrink + Widget.shrink; symmetric ScrollPanel.intrinsicWidth; scroll
 position survives a rebuild (ScrollPanel.child(...) + pending offset); public maxScroll;
 UiRuntime.audit(LaidOut); TextField.focused builder.

Edge/config ergonomics (feedback ):
- PlayerHandle.hasPermission(int), InventoryAccess.EMPTY, ConfigStore.reload returns a
 ReloadResult (no throw), and consumer Test/JavaExec tasks get the full runtime flag set.

Deep, sovereign protection:
- Zig native anti-tamper guard: a freestanding, zero-dependency .so (no libc, raw Linux
 syscalls) — fast FNV-1a + /proc/self/status TracerPid — bound via FFM (NativeGuard) with
 a pure-Java fallback; built by a toolchain-gated zig build-lib task. CLI `guard`.
- Runtim